added api project

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/progress.gif" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/api.svg" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 4-->
@@ -305,7 +305,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Come Back Later</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Random Friend Generator API</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -313,13 +313,16 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/progress.gif" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/api.svg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-4">This is a small school project I made to demonstrate use of an API and async await in JavaScript.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
-                                        <i class="fas fa-xmark fa-fw"></i>
-                                        Close Window
+                                        &#x2190; Go Back
                                     </button>
+                                    <a class="btn btn-outline-dark btn-social mx-1" href="https://github.com/Gabrrrl/cit-93-javascript-1" target="_blank"><i class="fab fa-fw fa-github"></i></a>
+                                    Source Code.&nbsp;
+                                    <a class="btn btn-outline-dark btn-social mx-1" href="https://gabrrrl.github.io/cit-93-javascript-1/index.html" target="_blank"><i class="fab fa-fw"></i></a>
+                                    Demo.
                                 </div>
                             </div>
                         </div>
