--- a/index.html
+++ b/index.html
@@ -249,9 +249,9 @@
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         &#x2190; Go Back
                                     </button>
-                                    <a class="btn btn-outline-dark btn-social mx-1" href="https://github.com/Gabrrrl/calculator" target="_blank"><i class="fab fa-fw fa-github"></i></a>
+                                    <a class="btn btn-outline-dark btn-social mx-1" href="https://thevideogabe.github.io/calculator/" target="_blank"><i class="fab fa-fw fa-github"></i></a>
                                     Source Code.&nbsp;
-                                    <a class="btn btn-outline-dark btn-social mx-1" href="https://gabrrrl.github.io/calculator/" target="_blank"><i class="fab fa-fw"></i></a>
+                                    <a class="btn btn-outline-dark btn-social mx-1" href="https://thevideogabe.github.io/calculator/" target="_blank"><i class="fab fa-fw"></i></a>
                                     Demo.
                                 </div>
                             </div>
@@ -284,9 +284,9 @@
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         &#x2190; Go Back
                                     </button>
-                                    <a class="btn btn-outline-dark btn-social mx-1" href="https://github.com/Gabrrrl/etch-a-sketch" target="_blank"><i class="fab fa-fw fa-github"></i></a>
+                                    <a class="btn btn-outline-dark btn-social mx-1" href="https://thevideogabe.github.io/etch-a-sketch/" target="_blank"><i class="fab fa-fw fa-github"></i></a>
                                     Source Code.&nbsp;
-                                    <a class="btn btn-outline-dark btn-social mx-1" href="https://gabrrrl.github.io/etch-a-sketch/" target="_blank"><i class="fab fa-fw"></i></a>
+                                    <a class="btn btn-outline-dark btn-social mx-1" href="https://thevideogabe.github.io/etch-a-sketch/" target="_blank"><i class="fab fa-fw"></i></a>
                                     Demo.
                                 </div>
                             </div>
@@ -319,9 +319,9 @@
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         &#x2190; Go Back
                                     </button>
-                                    <a class="btn btn-outline-dark btn-social mx-1" href="https://github.com/Gabrrrl/cit-93-javascript-1" target="_blank"><i class="fab fa-fw fa-github"></i></a>
+                                    <a class="btn btn-outline-dark btn-social mx-1" href="https://thevideogabe.github.io/cit-93-javascript-1/index.html" target="_blank"><i class="fab fa-fw fa-github"></i></a>
                                     Source Code.&nbsp;
-                                    <a class="btn btn-outline-dark btn-social mx-1" href="https://gabrrrl.github.io/cit-93-javascript-1/index.html" target="_blank"><i class="fab fa-fw"></i></a>
+                                    <a class="btn btn-outline-dark btn-social mx-1" href="https://thevideogabe.github.io/cit-93-javascript-1/index.html" target="_blank"><i class="fab fa-fw"></i></a>
                                     Demo.
                                 </div>
                             </div>
