--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">My Socials</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/Gabrrrl" target="_blank"><i class="fab fa-fw fa-github"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/TheVideoGabe" target="_blank"><i class="fab fa-fw fa-github"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.instagram.com/videogabe_/" target="_blank"><i class="fab fa-fw fa-instagram"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://twitter.com/VideoGabe_" target="_blank"><i class="fab fa-fw fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/gabriel-corral-cardenas-0504a1184/" target="_blank"><i class="fab fa-fw fa-linkedin-in"></i></a>
